fixed overflow on carousel

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 .list .wrapper {
   position: relative;
+  overflow: hidden;
 }
 .list .wrapper .sliderArrow {
   width: 50px;
